# webrtc-native-build

./: .gitmodules  CMakeLists.txt  README.md  VERSION
.github/workflows/: build_and_release.yml  build_docker_linux.yml  build_only.yml  scheduled-stats.yml  test_build.yml  test_build_linux.yml  test_build_mac.yml  test_build_windows.yml
docker/ubuntu-20.04/: Dockerfile  run.sh
docker/ubuntu-22.04/: Dockerfile  run.sh
docker/ubuntu-24.04/: Dockerfile  run.sh
patches/: apply_patch.sh  libvpx_BUILD.gn.patch  libvpx_linux_arm64-highbd_vp9_rtcd.h.patch  libvpx_linux_arm64-highbd_vpx_dsp_rtcd.h.patch  libvpx_linux_arm64_vp9_rtcd.h.patch  libvpx_linux_arm64_vpx_dsp_rtcd.h.patch  loss_based_bwe_v2.cc.patch
